# hackUPC_F_MotTorrent

./: .gitignore  API2-Documentation.md  CMakeLists.txt  ContadorA.cc~  Mitjana.cc~  NoobProjekt~  README.md  Taula.cc~  app.js  commandport.cpp  dimon.cpp  incpairs.cc  libraries-used  main.cpp  main.cpp~  morse.cc  morse.x  operations.cpp  operations.h  reverse.cc~  taula.cc~
Matrices/: Buscamines.cc  examenMat.cc  fire.cc  fire.x  flota.x  hundirlaflota.cc  jocvida.cc  mat.x  mines.x  product_mat.cc  robots.cc  tartaglia.cc
Other/: asdf.cc  compressedvector.cc  controlC401B.cc  controlC401C.cc  controlC502A.cc  controlC502C.cc  controlC502E.cc  fields.cc  infixes.cc  kashfg.cpp  latinsquare.cc  rectangles2.cc  symmetric.cc  tennis.cc  wordsearch.cc
Sort/: bubblesort.cc  insertionsort.cc  mergesort.cc  selectionsort.cc  sort.x  sorting.cc
Vectors/: ISBN.cc  concatenation.cc  controlC402A.cc  controlC402C.cc  controlC402D.cc  equal_last.cc  horner.cc  pro.x  scalar_product.cc  sum.x  sum_rest.cc
backend/: app.js  package.json  protocol.txt
backend2/: app.js  package.json
daemon/: CMakeLists.txt  a.out  commandport.cpp  dimon.cpp  main.cpp  operations.cpp  operations.h
frontend/: dummyjson  index.html  index2.html
libtorrent/: Makefile.in
makesmthgcool/: GAME.cpp  GAME.h  MAIN.cpp  MAIN2.cpp  PLAYER.cpp  PLAYER.h  cool.pro  sfml-app
pro1/: Colatz.cc  Lookinga.cc  Swap.cc  controlC201B.cc  controlC202A.cc  controlC202B.cc  controlC202C.cc  controlC202D.cc  controlC202E.cc  controlC202F.cc  divisions.cc  entreintervals.cc  fermat.cc  fermat2.cc  lcm.cc  (+8 more)
(+42 files in other folders)
